--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Ubuntu&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Ubuntu&display=swap" rel="stylesheet">
   <!-- Font Awesome CDN -->
   <script src="https://kit.fontawesome.com/245f557a5c.js" crossorigin="anonymous"></script>
   <!-- JavaSciript and Jquery Scripts -->
@@ -70,15 +70,35 @@
   <!-- Features -->
 
   <section id="features">
+    <div class="container-fluid feature-container">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
+      <div class="row">
+        <div class="col-md-4">
+          <span> <i class="fas fa-check-circle feature-icon"></i></span>
+          <h3 class="feature-title">Easy to use.</h3>
+          <p class="feature-desc">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-md-4">
+          <i class="fas fa-bullseye"></i>
+          <h3 class="feature-title">Elite Clientele</h3>
+          <p class="feature-desc">We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-md-4">
+          <i class="fas fa-heart"></i>
+          <h3 class="feature-title">Guaranteed to work.</h3>
+          <p class="feature-desc">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+
+
+
+
+    </div>
+
+
+
 
   </section>
 
