--- a/index.html
+++ b/index.html
@@ -70,26 +70,26 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="container-fluid feature-container">
+
 
 
       <div class="row">
-        <div class="col-md-4">
-          <span> <i class="fas fa-check-circle feature-icon"></i></span>
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-check-circle fa-4x"></i>
           <h3 class="feature-title">Easy to use.</h3>
           <p class="feature-desc">So easy to use, even your dog could do it.</p>
         </div>
-        <div class="col-md-4">
-          <i class="fas fa-bullseye"></i>
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-bullseye fa-4x"></i>
           <h3 class="feature-title">Elite Clientele</h3>
           <p class="feature-desc">We have all the dogs, the greatest dogs.</p>
         </div>
-        <div class="col-md-4">
-          <i class="fas fa-heart"></i>
+        <div class="feature-box col-lg-4">
+          <i class="icon fas fa-heart fa-4x"></i>
           <h3 class="feature-title">Guaranteed to work.</h3>
           <p class="feature-desc">Find the love of your dog's life or your money back.</p>
         </div>
-      </div>
+
 
 
 
