--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Pricing</a>
+              <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -56,8 +56,8 @@
 
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
-          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
-          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+           <a href="https://www.apple.com/in/app-store/"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button></a>
+          <a href="https://play.google.com/store"><button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button></a>
         </div>
         <div class="col-lg-6">
           <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
@@ -220,9 +220,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <a href="https://www.apple.com/in/app-store/"><button class="btn btn-lg btn-dark cta-button" type="button"><i class="fab fa-apple"></i> Download</button></a>
+    <a href="https://play.google.com/store"><button class="btn btn-lg btn-light cta-button" type="button"><i class="fab fa-google-play"></i> Download</button></a>
 
   </section>
 
@@ -230,8 +230,13 @@
   <!-- Footer -->
 
   <footer id="footer">
+      <a href="https://www.twitter.com"><i class="footer-icon fab fa-twitter"></i></a>
+      <a href="https://www.facebook.com"><i class="footer-icon fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com"><i class="footer-icon fab fa-instagram"></i></a>
+      <a href="mailto:ujjwaltyagi355@gmail.com"><i class="footer-icon fas fa-envelope"></i></a>
 
-    <p>© Copyright 2018 TinDog</p>
+
+    <p class="footer-desc">© Copyright 2018 TinDog</p>
 
   </footer>
 
